css/style.css
body {
  background-color: hsl(212, 45%, 89%);
  margin: auto;
  height: 100vh;
  place-content: center;
}

main {
  display: flex;
  place-content: center;
}

.content {
  width: 18rem;
  height: 27.6875rem;
  background-color: hsl(0, 0%, 100%);
  display: flex;
  text-align: center;
  flex-direction: column;
  border-radius: 1rem;
  padding: 1rem 1rem 2.5rem 1rem;
  box-shadow: 0 1.5625rem 1.5625rem 0 rgb(0 0 0 / 4.77%)
}

.text_content {
  width: 16rem;
  padding: 0 1rem;

  h1 {
    font-family: "Outfit", sans-serif;
    font-weight: 700;
    color: hsl(218, 44%, 22%);
    font-size: 1.375rem;
    width: 16rem;
    margin: 1.5rem 0 0 0;
    line-height: 120%;
    letter-spacing: 0.0125rem;
  }

  p {
    font-family: "Outfit", sans-serif;
    font-weight: 400;
    color: hsl(216, 15%, 48%);
    font-size: 0.9375rem;
    width: 16rem;
    margin: 1rem 0 0 0;
    line-height: 120%;
    letter-spacing: 0.0125rem;
  }
}

.qr_code {
  width: 18rem;
  height: 18rem;

  img {
    width: 18rem;
    border-radius: 0.625rem;
  }
}

footer {
  position: absolute;
  bottom: 50px;
  left: 50%;
  transform: translate(-50%, 50%)
}

